--- a/src/App.css
+++ b/src/App.css
@@ -30,8 +30,8 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-grey-10);
-  color: var(--clr-grey-1);
+  background:whitesmoke;
+  color: gray;
   line-height: 1.5;
   font-size: 0.875rem;
 }
@@ -136,13 +136,13 @@ Slider
   overflow: hidden;
 }
 .person-img {
-  border-radius: 50%;
+  border-radius: 20%;
   margin-bottom: 1rem;
-  width: 150px;
-  height: 150px;
+  width: fit-content;
+  height: 170px;
   object-fit: cover;
-  border: 4px solid var(--clr-grey-8);
-  box-shadow: var(--dark-shadow);
+  border: gray;
+  box-shadow: gray;
 }
 article h4 {
   text-transform: uppercase;
@@ -164,7 +164,7 @@ article h4 {
 .icon {
   font-size: 3rem;
   margin-top: 1rem;
-  /* color: gray; */
+
 }
 
 .prev,
@@ -172,13 +172,13 @@ article h4 {
   position: absolute;
   top: 200px;  
   transform: translateY(-50%);
-  background: lightgray;
+  background: transparent;
+
   color: gray;
   width: fit-content;
   height: 2rem;
   display: grid;
   place-items: center;
-  /* border-color: red; */
   font-size: 1rem;
   border-radius: var(--radius);
   border:none;
@@ -208,6 +208,7 @@ article h4 {
     height: auto;
     font-size: 1rem;
     border: none;
+    background-color: transparent;
     
   }
 }
